# taskminder-backend

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTE.md  Makefile  docker-compose.local.yaml  docker-compose.production.yaml  pyproject.toml
.envs/.local/: .postgres
.envs/.production/: .django  .postgres
.github/: .commit_template
.github/workflows/: bump_version.yaml
apps/admin_logs/: apps.py  models.py
apps/tasks/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
apps/tasks/migrations/: 0001_initial.py
apps/tasks/tests/: test_models.py
apps/tasks/tests/test_views/: test_folders_view.py  test_tags_view.py  test_tasks_view.py
apps/users/: admin.py  factories.py  models.py  serializers.py  tokens.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_uuid.py  0003_auto_20241114_1207.py  0004_auto_20241114_1207.py
apps/users/tests/: test_models.py  test_views.py
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile
config/: settings.py  urls.py
config/settings/: base.py  local.py  production.py  test.py
fixtures/: common.py
