[tool.poetry]
name = "taskminder-backend"
version = "0.1.0"
description = "A task management app designed to keep your daily life organized"
authors = ["Lajos Seyler <lajos.seyler@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE, Version 2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
commitizen = "^3.30.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
